syntax = "proto3";

package dummy.v1;

option go_package="github.com/veganafro/mono/pkg/dummy/v1";

message GetHelloRequest {
    string msg = 1;
}

message GetHelloResponse {
    string rsp = 1;
}
